--- a/api-escape/.env
+++ b/api-escape/.env
@@ -2,11 +2,11 @@
 PORT= 3000
 
 # Database
-DB_HOST=db-escape  # Nome do serviço do banco de dados no Docker Compose
+DB_HOST=db-escape  # Nome do serviço do banco de dados no Docker Compose ou localhost para ambiente local
 DB_PORT=3306
-DB_USER=root  # Usuário do banco de dados (root)
-DB_PASS=Alemao890.  # Senha do usuário root
-DB_NAME=escape  # Nome do banco de dados
+DB_USER=root 
+DB_PASS=Alemao890. # Senha do seu banco de dados
+DB_NAME=escape  # Nome do banco de dados que será criado
 
 # JWT
 JWT_SECRET=your_secret_key
