--- a/api-escape/.env
+++ b/api-escape/.env
@@ -1,8 +1,9 @@
 # Server
 PORT= 3000
+# API_URL=http://192.168.0.6
 
 # Database
-DB_HOST=db-escape  # Nome do serviço do banco de dados no Docker Compose ou localhost para ambiente local
+DB_HOST=db-escape  # db-escape Nome do serviço do banco de dados no Docker Compose ou localhost para ambiente local
 DB_PORT=3306
 DB_USER=root 
 DB_PASS=Alemao890. # Senha do seu banco de dados
@@ -10,3 +11,7 @@ DB_NAME=escape  # Nome do banco de dados que será criado
 
 # JWT
 JWT_SECRET=your_secret_key
+  
+API_URL=http://192.168.0.6 
+  
+API_URL=http://192.168.0.6 
